# deal2

./: README.md
dynamic/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cylinderc.inp  cylinderc.txt  cylindercc.txt  cylinderf.inp  cylinderf.txt  grid-flowovercylinder.eps  grid-flowoversquare.eps  ns  nsbench.inp
dynamic/cylindermesh/: cylinderp1c.txt  cylinderp1f.txt  cylinderquad.inp
dynamic/include/: NavierStoke.h  dynamic.h  includeall.h  post.h  pre.h  user_input.h
dynamic/include/his/: generalizeAlpha.h  linear.h  newton.h
dynamic/mesh/: 1mesh.txt  bcEle.txt  bcElec.txt  bcElef.txt  p1bc-cylinder.txt  p1bc.txt  p1mesh-cylinder.txt  p1mesh.txt  p1meshcoarse.txt  p2bc.txt  p2mesh.txt  p3bc-cylinder.txt  p3bc.txt  p3bcEle.txt  p3mesh-cylinder.txt  p5bc.txt  p5mesh.txt  p7bc.txt
dynamic/mesh/gmsh/: cylinder.geo  cylinder_c.geo  cylinder_c.msh  cylinder_cc.geo  cylinder_cc.msh  cylinder_f.geo  cylinder_f.msh  cylinder_ff.geo  cylinder_fine.geo  cylinder_fine.msh  (+6 more)
dynamic/paraview/: 100-solution-0000.vtk
dynamic/post-matlab/: GaussQuad.m  K_index.m  LinePlot.m  QuadShapeFunc.m  calculateForce.m  elementIEN.m  force.m  getShapeFunc.m  getintergrate.m  getjacobian.m  getu2.m  getuvp.m  mapSolution.m  mapuv.m  nIntergerPoints.m  plotAverage.m  plotForce.m  plotSolution.m  polyplot.m  readin_bc.m  readin_bcele.m  readin_mesh.m  setupMesh.m  timeAveragePlot.m
dynamic/solution/: 100-pn-1.txt  100-pt_n-1.txt  100-un-1.txt  100-ut_n-1.txt
dynamic/src/: NavierStokes.cpp  dynamic.cpp  main.cpp  post.cpp  pre.cpp  user_input.cpp
(+900 files in other folders)
